# redactorizer

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.cursor/rules/: tauri-svelte-typescript.mdc
logo/: Logo idea 2.sketch
scripts/: upload-mac-app-store.sh
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: pdf.ts  redactorCanvas.ts
src/lib/components/: Button.svelte  EffectOptions.svelte  ErrorMessage.svelte  LoadingIndicator.svelte  PageSidebar.svelte  Placeholder.svelte  ShapeOverlay.svelte  Toolbar.svelte  ToolbarGroup.svelte  index.ts
src/lib/types/: redactor.ts
src/routes/: +layout.svelte  +page.svelte
