[package]
name = "Redactorizer"
version = "0.1.0"
description = "Redact the heck out of your documents"
authors = ["Jason Norwood-Young"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "redactorizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-share = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"

# macOS native share sheet (NSSharingServicePicker)
[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSURL", "NSArray"] }
objc2-app-kit = "0.3"
raw-window-handle = "0.6"

